syntax = "proto3";

package datacore.adapter;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "TagSearchService.proto";
import "WriteOperationStatus.proto";

option csharp_namespace = "DataCore.Adapter.Grpc";


service TagValuesService {
    // Snapshot polling/push
    rpc ReadSnapshotTagValues (ReadSnapshotTagValuesRequest) returns (stream TagValueQueryResult);
    rpc CreateSnapshotPushChannel (CreateSnapshotPushChannelRequest) returns (stream TagValueQueryResult);
    rpc GetSnapshotPushChannelTags (GetSnapshotPushChannelTagsRequest) returns (stream TagIdentifier);
    rpc AddTagsToSnapshotPushChannel (AddTagsToSnapshotPushChannelRequest) returns (AddTagsToSnapshotPushChannelResponse);
    rpc RemoveTagsFromSnapshotPushChannel (RemoveTagsFromSnapshotPushChannelRequest) returns (RemoveTagsFromSnapshotPushChannelResponse);
    
    // Historical data polling
    rpc ReadRawTagValues (ReadRawTagValuesRequest) returns (stream TagValueQueryResult);
    rpc ReadPlotTagValues (ReadPlotTagValuesRequest) returns (stream TagValueQueryResult);
    rpc ReadInterpolatedTagValues (ReadInterpolatedTagValuesRequest) returns (stream TagValueQueryResult);
    rpc ReadTagValuesAtTimes (ReadTagValuesAtTimesRequest) returns (stream TagValueQueryResult);
    rpc GetSupportedDataFunctions (GetSupportedDataFunctionsRequest) returns (GetSupportedDataFunctionsResponse);
    rpc ReadProcessedTagValues (ReadProcessedTagValuesRequest) returns (stream ProcessedTagValueQueryResult);

    // Write tag values
    rpc WriteSnapshotTagValues(stream WriteTagValueRequest) returns (stream WriteTagValueResult);
    rpc WriteHistoricalTagValues(stream WriteTagValueRequest) returns (stream WriteTagValueResult);
}


// Read snapshot tag values
message ReadSnapshotTagValuesRequest {
    string adapter_id = 1;
    repeated string tags = 2;
    map<string,string> properties = 3;
}


// Snapshot tag value push
message CreateSnapshotPushChannelRequest {
    string adapter_id = 1;
    repeated string tags = 2;
}
message GetSnapshotPushChannelTagsRequest {
    string adapter_id = 1;
}
message AddTagsToSnapshotPushChannelRequest {
    string adapter_id = 1;
    repeated string tags = 2;
}
message AddTagsToSnapshotPushChannelResponse {
    int32 count = 1;
}
message RemoveTagsFromSnapshotPushChannelRequest {
    string adapter_id = 1;
    repeated string tags = 2;
}
message RemoveTagsFromSnapshotPushChannelResponse {
    int32 count = 1;
}

// Read raw tag values
enum RawDataBoundaryType {
    RAW_DATA_BOUNDARY_TYPE_INSIDE = 0;
    RAW_DATA_BOUNDARY_TYPE_OUTSIDE = 1;
}
message ReadRawTagValuesRequest {
    string adapter_id = 1;
    repeated string tags = 2;
    google.protobuf.Timestamp utc_start_time = 3;
    google.protobuf.Timestamp utc_end_time = 4;
    int32 sample_count = 5;
    RawDataBoundaryType boundary_type = 6;
    map<string,string> properties = 7;
}


// Read plot tag values
message ReadPlotTagValuesRequest {
    string adapter_id = 1;
    repeated string tags = 2;
    google.protobuf.Timestamp utc_start_time = 3;
    google.protobuf.Timestamp utc_end_time = 4;
    int32 intervals = 5;
    map<string,string> properties = 6;
}


// Read interp tag values
message ReadInterpolatedTagValuesRequest {
    string adapter_id = 1;
    repeated string tags = 2;
    google.protobuf.Timestamp utc_start_time = 3;
    google.protobuf.Timestamp utc_end_time = 4;
    google.protobuf.Duration sample_interval = 5;
    map<string,string> properties = 6;
}


// Read tag values at times
message ReadTagValuesAtTimesRequest {
    string adapter_id = 1;
    repeated string tags = 2;
    repeated google.protobuf.Timestamp utc_sample_times = 3;
    map<string,string> properties = 4;
}


// Read processed tag values
message GetSupportedDataFunctionsRequest {
    string adapter_id = 1;
}
message GetSupportedDataFunctionsResponse {
    repeated DataFunctionDescriptor data_functions = 1;
}
message ReadProcessedTagValuesRequest {
    string adapter_id = 1;
    repeated string tags = 2;
    google.protobuf.Timestamp utc_start_time = 3;
    google.protobuf.Timestamp utc_end_time = 4;
    google.protobuf.Duration sample_interval = 5;
    repeated string data_functions = 6;
    map<string,string> properties = 7;
}


// Tag value models
enum TagValueStatus {
    TAG_VALUE_STATUS_BAD = 0;
    TAG_VALUE_STATUS_UNKNOWN = 64;
    TAG_VALUE_STATUS_GOOD = 192;
}


message TagValue {
    google.protobuf.Timestamp utc_sample_time = 1;
    double numeric_value = 2;
    string text_value = 3;
    TagValueStatus status = 4;
    string units = 5;
    string notes = 6;
    string error = 7;
    map<string, string> properties = 8; 
}


enum TagValueQueryType {
    TAG_VALUE_QUERY_TYPE_UNKNOWN = 0;
    TAG_VALUE_QUERY_TYPE_SNAPSHOT_POLL = 1;
    TAG_VALUE_QUERY_TYPE_SNAPSHOT_PUSH = 2;
    TAG_VALUE_QUERY_TYPE_RAW = 3;
    TAG_VALUE_QUERY_TYPE_PLOT = 4;
    TAG_VALUE_QUERY_TYPE_INTERPOLATED = 5;
    TAG_VALUE_QUERY_TYPE_VALUES_AT_TIMES = 6;
    TAG_VALUE_QUERY_TYPE_PROCESSED = 7;
}


message TagValueQueryResult {
    string tag_id = 1;
    string tag_name = 2;
    TagValueQueryType query_type = 3;
    TagValue value = 4;
}


message ProcessedTagValueQueryResult {
    string tag_id = 1;
    string tag_name = 2;
    TagValueQueryType query_type = 3;
    string data_function = 4;
    TagValue value = 5;
}


message DataFunctionDescriptor {
    string name = 1;
    string description = 2;
}


message WriteTagValueRequest {
    string correlation_id = 1;
    string adapter_id = 2;
    string tag_id = 3;
    google.protobuf.Timestamp utc_sample_time = 4;
    double numeric_value = 5;
    string text_value = 6;
    TagValueStatus status = 7;
    string units = 8;
}


message WriteTagValueResult {
    string correlation_id = 1;
    string adapter_id = 2;
    string tag_id = 3;
    WriteOperationStatus write_status = 4;
    string notes = 5;
    map<string, string> properties = 6;
}
